new commit for testing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <h1>It got Deployed...</h1>
+    <h1>It got Deployed... and pipeline got created</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
